--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
 <body>
  
  <% if current_user %>
+          <%=current_user.email%>
           <%= link_to('登出', destroy_user_session_path, :method => :delete) %> |
           <%= link_to('修改密碼', edit_registration_path(:user)) %>
       <% else %>
